opam-version: "1.2"
maintainer: "Frederic Bour <frederic.bour@lakaban.net>"
authors: ["Frederic Bour <frederic.bour@lakaban.net>"
          "Anil Madhavapeddy <anil@recoil.org>"]
homepage: "https://github.com/let-def/topexpect"
bug-reports: "https://github.com/let-def/topexpect"
license: "MIT"
dev-repo: "https://github.com/let-def/topexpect.git"
build: [
  ["jbuilder" "subst" "-p" name "--name" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "runtest" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
  "ppx_sexp_conv"
  "sexplib"
  "ocamlfind"
]
available: [ ocaml-version >= "4.04.0" ]
